1. fleet cascading 수정

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -86,6 +86,14 @@
                                 <a class="nav-link {% if active_submenu == 'Nurse Rostering Advanced Demo' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_advanced_demo' %}">Advanced Demo</a>
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Fleet Cascading</strong></li>
+<!--                            <li class="nav-item nested">-->
+<!--                                <a class="nav-link {% if active_submenu == 'fleet_cascading_introduction0' %}active{% endif %}"-->
+<!--                                   href="{% url 'resource_allocation_app:fleet_cascading_introduction0' %}">Introduction</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item nested">-->
+<!--                                <a class="nav-link {% if active_submenu == 'fleet_cascading_demo0' %}active{% endif %}"-->
+<!--                                   href="{% url 'resource_allocation_app:fleet_cascading_demo0' %}">Demo</a>-->
+<!--                            </li>-->
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'fleet_cascading_introduction' %}active{% endif %}"
                                    href="{% url 'resource_allocation_app:fleet_cascading_introduction' %}">Introduction</a>
